Ajout de route admin détail dans le readme
